add icon for mail

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <a href="https://twitter.com/ishubhguptaa" target="_blank" class="bi bi-twitter"></a>
                 <a href="https://instagram.com/ishubhgupta" target="_blank" class="bi bi-instagram"></a>
                 <a href="https://linkedin.com/in/ishubhgupta" target="_blank" class="bi bi-linkedin"></a>
+                <a href="mailto:shubhorai12@gmail.com" class="bi bi-envelope" target="_blank"></a>
+
+
                 <a href="#" class="recuriter-link">Recruiter?</a>
                 <a href="link-to-resume" class="resume-link" download>Resume <span class="material-symbols-outlined"> Download </span></a>
             </nav>
