--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/index.css"> <!-- Your custom styles -->
-    <link rel="icon" type="image/png" href="assets\images\shubhImage2.jpg" alt="evolkai">
+    <link rel="icon" type="image/png" href="assets\images\shubhImage1.png" alt="evolkai">
     <title>Shubh Gupta</title>
 </head>
 <body onload="loadContent('home')">
