--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <div class="nav-option" onclick="loadContent('tech-stack')">Tech Stack</div>
                 <div class="nav-option" onclick="loadContent('projects')">Projects</div>
                 <div class="nav-option" onclick="loadContent('researchContribution')">Research Contribution</div>
+                <div class="nav-option" onclick="loadContent('achivement')">Achivement</div>
+                <div class="nav-option" onclick="loadContent('contact')">Contact</div>
             </div>
         </div>
         <div class="right" id="dynamic-content">
@@ -57,6 +59,8 @@
     <div id="tech-stack" style="display: none;"></div>
     <div id="projects project-section-container" style="display: none;"></div>
     <div id="researchContribution" style="display: none;"></div>
+    <div id="achivement" style="display: none;"></div>
+    <div id="contact" style="display: none;"></div>
     
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -79,6 +83,8 @@
                 'projects': 'project-section.html',
                 'researchContribution': 'researchContribution.html',
                 'intro': 'intro.html',
+                'achivement': 'achivement.html',
+                'contact': 'contact.html',
             };
     
             var contentURL = contentMap[option];
