added blog logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </div>
         <div class="header-right">
             <nav class="social-links">
+                
                 <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github"></a>
+                <a href="link-to-your-blog" target="_blank" class="bi bi-file-earmark-text"></a>
                 <a href="https://twitter.com/ishubhguptaa" target="_blank" class="bi bi-twitter"></a>
                 <a href="https://instagram.com/ishubhgupta" target="_blank" class="bi bi-instagram"></a>
                 <a href="https://linkedin.com/in/ishubhgupta" target="_blank" class="bi bi-linkedin"></a>
