modified my image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="left">
             <div class="above">
                 <div class="profile-image">
-                    <img src="assets/images/shubhImage2.png" alt="Profile Image">
+                    <img src="assets/images/shubhImage4.jpg" alt="Profile Image">
                 </div>
                 <div class="name">
                     Shubh Gupta
