--- a/project-section.html
+++ b/project-section.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="css/project-section.css">
 <!-- Machine Learning Projects -->
 <div class="prj-category">
     <h3>Machine Learning</h3>
