--- a/tech-stack.html
+++ b/tech-stack.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="css/tech-stack.css">
 <h2>Tech Stack</h2>
         <div class="tech-stack">
             <div class="tech-category">
