--- a/researchContribution.html
+++ b/researchContribution.html
@@ -1,2 +1,3 @@
+<link rel="stylesheet" href="css/researchContributuion.css">
 <h2>Research Contribution</h2>
 <p>This is the research contribution content about Shubh Gupta. Feel free to customize this with your own information.</p>
