contact page modifiactaion

--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,22 @@
 <link rel="stylesheet" href="css/contact.css">
-<body>
-    <div id="contact-section">
-        <h2>Contact Information</h2>
-        <div id="social-media">
-            <a href="https://github.com/yourusername" target="_blank" class="social-link">GitHub</a>
-            <a href="https://twitter.com/yourusername" target="_blank" class="social-link">Twitter</a>
-            <a href="https://linkedin.com/in/yourusername" target="_blank" class="social-link">LinkedIn</a>
-            <!-- Add more social media links as needed -->
-        </div>
-        <div id="college-address">
-            <h3>College Address</h3>
-            <p>VIT Bhopal University</p>
-            <p>Sehore, Madhya Pradesh, India</p>
-        </div>
-        <div id="additional-contact">
-            <h3>Additional Contact Information</h3>
-            <p>Email: your.email@example.com</p>
-            <p>Phone: +123 456 7890</p>
-            <!-- Add more contact information as needed -->
-        </div>
-    </div>
-    <script src="contact.js"></script>
-</body>
 
+<!-- Contact Information -->
+<div class="contact-info">
+    <h3>Contact Information</h3>
+
+    <!-- Email -->
+    <p>Email: <a href="mailto:shubhorai12@gmail.com">shubhorai12@gmail.com</a></p>
+
+    <!-- College Address -->
+    <p>College Address: VIT Bhopal University, Sehore, Madhya Pradesh, India</p>
+
+    <!-- Social Media Links -->
+    <nav class="contact-social-links">
+        <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a>
+        <a href="link-to-your-blog" target="_blank" class="bi bi-file-earmark-text" title="Blog"></a>
+        <a href="https://twitter.com/ishubhguptaa" target="_blank" class="bi bi-twitter" title="Twitter"></a>
+        <a href="https://instagram.com/ishubhgupta" target="_blank" class="bi bi-instagram" title="Instagram"></a>
+        <a href="https://linkedin.com/in/ishubhgupta" target="_blank" class="bi bi-linkedin" title="LinkedIn"></a>
+        <a href="mailto:shubhorai12@gmail.com" class="bi bi-envelope" title="Email"></a>
+    </nav>
+</div>
