--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,18 @@
 <link rel="stylesheet" href="css/contact.css">
+<body>
+    <div id="contact-form">
+        <h2>Contact Me</h2>
+        <p>Get in touch with me at shubhorai12@gmail.com</p>
+        <p>Or find me on:</p>
+        <ul>
+            <li><a href="link-to-your-blog" target="_blank" class="bi bi-file-earmark-text" title="Blog"></a></li>
+            <li><a href="https://twitter.com/ishubhguptaa" target="_blank" class="bi bi-twitter" title="Twitter"></a></li>
+            <li><a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a></li>
+            <li><a href="https://instagram.com/ishubhgupta" target="_blank" class="bi bi-instagram" title="Instagram"></a></li>
+            <li><a href="https://linkedin.com/in/ishubhgupta" target="_blank" class="bi bi-linkedin" title="LinkedIn"></a></li>
+            <li><a href="mailto:shubhorai12@gmail.com" class="bi bi-envelope" title="Email"></a></li>
+        </ul>
+      </div>
+</body>
 
-<!-- Contact Information -->
-<div class="contact-info">
-    <h3>Contact Information</h3>
-
-    <!-- Email -->
-    <p>Email: <a href="mailto:shubhorai12@gmail.com">shubhorai12@gmail.com</a></p>
-
-    <!-- College Address -->
-    <p>College Address: VIT Bhopal University, Sehore, Madhya Pradesh, India</p>
-
-    <!-- Social Media Links -->
-    <nav class="contact-social-links">
-        <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a>
-        <a href="link-to-your-blog" target="_blank" class="bi bi-file-earmark-text" title="Blog"></a>
-        <a href="https://twitter.com/ishubhguptaa" target="_blank" class="bi bi-twitter" title="Twitter"></a>
-        <a href="https://instagram.com/ishubhgupta" target="_blank" class="bi bi-instagram" title="Instagram"></a>
-        <a href="https://linkedin.com/in/ishubhgupta" target="_blank" class="bi bi-linkedin" title="LinkedIn"></a>
-        <a href="mailto:shubhorai12@gmail.com" class="bi bi-envelope" title="Email"></a>
-    </nav>
-</div>
+  
