--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
     <div id="projects project-section-container" style="display: none;"></div>
     <div id="researchContribution" style="display: none;"></div>
     <div id="achivement" style="display: none;"></div>
-    <div id="contact" style="display: none;"></div>    
+    <div id="contact" class="contact" style="display: none;"></div>    
 </body>
 </html>
