--- a/index.html
+++ b/index.html
@@ -72,11 +72,21 @@
 <!-- Add this inside the <body> tag, after your existing content -->
     <section id="github-repos">
         <div class="carousel-container">
-            <div class="carousel">Hello 1</div>
-            <div class="carousel">Hello 2</div>
-            <div class="carousel">Hello 3</div>
-            <div class="carousel">Hello 4</div>
-            <div class="carousel">Hello 5</div>
+            <span class="heading">My Github Repositories</span>
+            <div class="carousel">
+                Repo 1<hr>
+            </div>
+
+            <div class="carousel">
+                Repo 2<hr>
+            </div>            
+            <div class="carousel">
+                Repo 3<hr>
+            </div>            
+            <div class="carousel">
+                Repo 4<hr>
+            </div>
+
         </div>
         <div class="controls">
             <button id="prevBtn" onclick="moveCarousel('left')">&#8249;</button>
