--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/index.css"> <!-- Your custom styles -->
     <link rel="icon" type="image/png" href="assets\images\shubhImage1.png" alt="evolkai">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shubh Gupta</title>
     <script src="index.js"></script>
     <script src="js/git.js"></script>
@@ -74,7 +75,7 @@
         <div class="carousel-container">
             <span class="heading">My Github Repositories</span>
             <div class="carousel">
-                Repo 1<hr>
+                <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a> Repo 1<hr>
             </div>
 
             <div class="carousel">
