github pages changes

--- a/index.html
+++ b/index.html
@@ -75,17 +75,25 @@
         <div class="carousel-container">
             <span class="heading">My Github Repositories</span>
             <div class="carousel">
-                <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a> Repo 1<hr>
+                <span>
+                    <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a> <a href="ishubhgupta.github.com/data-structures"> Data-Structures</a><hr>
+                </span>
             </div>
 
             <div class="carousel">
-                Repo 2<hr>
+                <span>
+                    <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a> Repo 2<hr>
+                </span>
             </div>            
             <div class="carousel">
-                Repo 3<hr>
+                <span>
+                    <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a> Repo 3<hr>
+                </span>
             </div>            
             <div class="carousel">
-                Repo 4<hr>
+                <span>
+                    <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a> Repo 4<hr>
+                </span>
             </div>
 
         </div>
