write something about my self

--- a/home.html
+++ b/home.html
@@ -1,2 +1,10 @@
 <link rel="stylesheet" href="css/style.css">
 <p>hello guys</p>
+<div>
+    I'm Shubh <br>
+    I'm currently working on Machine learning projects. <br>
+    I'm looking to collaborate on Innovative Al initiatives <br>
+    Currently learning Advanced ML and DL techniques. <br>
+    Ask me about Machine Learning, Deep Learning, Computer Vision, Python, C++, DSA. <br>
+    Fun fact about me is that I love Playing Cricket <br>
+</div>
