changes in github section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
                 <span>
                     <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a> <a href="ishubhgupta.github.com/data-structures"> Data-Structures</a><hr>
                 </span>
+                <div class="git-content">
+                    <span class="git-tech-stack">
+                        Tech-Stack:
+                        <ul>
+                            <li>Data Structures</li>
+                            <li>C++</li>
+                            <li>Problem Solving</li>
+                        </ul>
+                    </span>
+                </div>
             </div>
 
             <div class="carousel">
