--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="https://linkedin.com/in/ishubhgupta" target="_blank" class="bi bi-linkedin" title="LinkedIn"></a>
                 <a href="mailto:shubhorai12@gmail.com" class="bi bi-envelope" title="Email"></a>
                 <a href="#" class="recuriter-link" title="Recruiter?">Recruiter?</a>
-                <a href="link-to-resume" class="resume-link" download title="Download Resume">
+                <a href="assets/docs/resume1.pdf" class="resume-link" download title="Download Resume">
                     Resume <span class="material-symbols-outlined"> Download </span>
                 </a>
             </nav>
