contact button feature added

--- a/index.html
+++ b/index.html
@@ -171,10 +171,16 @@
     <section class="contact-section" id="contactSection">
         <button id="contactButton">Contact Us</button>
         <div id="contactContent" class="contact-content hidden">
-            <!-- Your contact options go here -->
-            <p>Email: example@example.com</p>
-            <p>Phone: +1 123-456-7890</p>
+            <div class="contact-options">
+                <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a>
+                <a href="link-to-your-blog" target="_blank" class="bi bi-file-earmark-text" title="Blog"></a>
+                <a href="https://twitter.com/ishubhguptaa" target="_blank" class="bi bi-twitter" title="Twitter"></a>
+                <a href="https://instagram.com/ishubhgupta" target="_blank" class="bi bi-instagram" title="Instagram"></a>
+                <a href="https://linkedin.com/in/ishubhgupta" target="_blank" class="bi bi-linkedin" title="LinkedIn"></a>
+                <a href="mailto:shubhorai12@gmail.com" class="bi bi-envelope" title="Email"></a>
+            </div>
         </div>
+        
         
     </section>
 
