update in contact button

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </section>
 
     <section class="contact-section" id="contactSection">
-        <button id="contactButton">Contact Us</button>
+        <button id="contactButton">Contact</button>
         <div id="contactContent" class="contact-content hidden">
             <div class="contact-options">
                 <a href="https://github.com/ishubhgupta" target="_blank" class="bi bi-github" title="GitHub"></a>
