--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <hr>
                 
                 <div class="repo-description">
-                    Hello this Repository is about Data Structurejkhalkjh
+                    Hello this Repository is about Data Structure
                 </div>
 
                 <hr> 
