--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/home.css">
 <p>hello guys</p>
 <div>
     I'm Shubh <br>
@@ -8,3 +8,19 @@
     Ask me about Machine Learning, Deep Learning, Computer Vision, Python, C++, DSA. <br>
     Fun fact about me is that I love Playing Cricket <br>
 </div>
+
+<div class="git-tech-stack">
+    <span>Tech-Stack:</Span>
+    <div class="git-tech-container">
+        <div class="items">Data Structures</div>
+        <div class="items">Deep Learning</div>
+        <div class="items">Machine Learning</div>
+        <div class="items">Computer Vision</div>
+        <div class="items">Natural Language Preprocessing (NLP)</div>
+        <div class="items">MySql</div>
+        <div class="items">Project Management</div>
+        <div class="items">Web Devlpoment</div>
+        
+    </div>
+</div>
+
