updated footer and solve bug in home section

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <footer>
     <div class="leftf">
         <span> Nice to see you here!</span>
-        <br><br>
+        <br>
         <p class="mail">shubhorai12@gmail.com</p>
         <p class="msg">This website is best viewed in desktop</p>
         <p class="msg">Made with Love by <span class="name">Shubh Gupta</span></p>
@@ -199,6 +199,8 @@
         <a href="mailto:shubhorai12@gmail.com">Email</a>
         <a href="https:/linkedin.com/in/ishubhgupta" class="Linkedin" method="_blank">LinkedIn</a>
     </div>
+    <span class="copyright">&copy; 2024 Shubh Gupta</span>
+
 
 </footer>    
 
