--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body onload="loadContent('home')">
     <header class="header">
         <div class="header-left">
-            <h1 class="headerName">Shubh Gupta</h1>
+            <h1 class="headerName">Shubh Gupta!!</h1>
         </div>
         <div class="header-right">
             <nav class="social-links">
