updated some color in index file

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
                     <span class="git-visibility">Public</span>
                 </span>
                 
-                <hr>
+                <div class="line"></div>
                 
                 <div class="repo-description">
                     Hello this Repository is about Data Structure
                 </div>
 
-                <hr>
+                <!-- <div class="line"></div> -->
 
 
                 <div class="git-tech-stack">
