added project title and changed look of project section

--- a/project-section.html
+++ b/project-section.html
@@ -1,10 +1,54 @@
 <link rel="stylesheet" href="css/project-section.css">
 <!-- Machine Learning Projects -->
+<h2>Projects</h2>
+<div class="line-right-div"></div>
 <div class="prj-category">
     <h3>Machine Learning</h3>
     <div class="prj-scroll-container">
         <div class="prj-box" onclick="showProjectInfo('Project 1', 'Description of Project 1 goes here.')">
-            <h4>Project 1</h4>
+            <h4>Emotion Detection</h4>
+            <p>Description of Project 1 goes here.</p>
+            <!-- Project Info Container for Project 1 -->
+            <div class="prj-info" id="prj-info-1">
+                <span class="close-btn" onclick="closeProjectInfo('prj-info-1')">Close</span>
+                <h4 id="prj-title-1"></h4>
+                <p id="prj-description-1"></p>
+            </div>
+        </div>
+
+        <div class="prj-box" onclick="showProjectInfo('Project 1', 'Description of Project 1 goes here.')">
+            <h4>Energy Insight</h4>
+            <p>Description of Project 1 goes here.</p>
+            <!-- Project Info Container for Project 1 -->
+            <div class="prj-info" id="prj-info-1">
+                <span class="close-btn" onclick="closeProjectInfo('prj-info-1')">Close</span>
+                <h4 id="prj-title-1"></h4>
+                <p id="prj-description-1"></p>
+            </div>
+        </div>
+
+        <div class="prj-box" onclick="showProjectInfo('Project 1', 'Description of Project 1 goes here.')">
+            <h4>Eye Blink Mistake Prediction</h4>
+            <p>Description of Project 1 goes here.</p>
+            <!-- Project Info Container for Project 1 -->
+            <div class="prj-info" id="prj-info-1">
+                <span class="close-btn" onclick="closeProjectInfo('prj-info-1')">Close</span>
+                <h4 id="prj-title-1"></h4>
+                <p id="prj-description-1"></p>
+            </div>
+        </div>
+
+        <div class="prj-box" onclick="showProjectInfo('Project 1', 'Description of Project 1 goes here.')">
+            <h4>Polymer Glass Prediction</h4>
+            <p>Description of Project 1 goes here.</p>
+            <!-- Project Info Container for Project 1 -->
+            <div class="prj-info" id="prj-info-1">
+                <span class="close-btn" onclick="closeProjectInfo('prj-info-1')">Close</span>
+                <h4 id="prj-title-1"></h4>
+                <p id="prj-description-1"></p>
+            </div>
+        </div>        <div class="prj-box" onclick="showProjectInfo('Project 1', 'Description of Project 1 goes here.')">
+            <h4>Polymer Glass Prediction</h4>
             <p>Description of Project 1 goes here.</p>
             <!-- Project Info Container for Project 1 -->
             <div class="prj-info" id="prj-info-1">
@@ -24,7 +68,10 @@
     <h3>Web Development</h3>
     <div class="prj-scroll-container">
         <div class="prj-box" onclick="showProjectInfo('Project 1', 'Description of Project 1 goes here.')">
-            <h4>Project 1</h4>
+            <h4>EvolkAI</h4>
+            <p>Description of Project 1 goes here.</p>
+            <p>Description of Project 1 goes here.</p>
+            <p>Description of Project 1 goes here.</p>
             <p>Description of Project 1 goes here.</p>
             <!-- Project Info Container for Project 1 -->
             <div class="prj-info" id="prj-info-web-1">
@@ -35,7 +82,22 @@
         </div>
 
         <div class="prj-box" onclick="showProjectInfo('Project 2', 'Description of Project 2 goes here.')">
-            <h4>Project 2</h4>
+            <h4>V-Rides</h4>
+            <p>Description of Project 2 goes here.</p>
+            <p>Description of Project 2 goes here.</p>
+            <p>Description of Project 2 goes here.</p>
+            <!-- Project Info Container for Project 2 -->
+            <div class="prj-info" id="prj-info-web-2">
+                <span class="close-btn" onclick="closeProjectInfo('prj-info-web-2')">Close</span>
+                <h4 id="prj-title-web-2"></h4>
+                <p id="prj-description-web-2"></p>
+            </div>
+        </div>
+
+        <div class="prj-box" onclick="showProjectInfo('Project 2', 'Description of Project 2 goes here.')">
+            <h4>Portfolio</h4>
+            <p>Description of Project 2 goes here.</p>
+            <p>Description of Project 2 goes here.</p>
             <p>Description of Project 2 goes here.</p>
             <!-- Project Info Container for Project 2 -->
             <div class="prj-info" id="prj-info-web-2">
@@ -55,7 +117,7 @@
     <h3>NLP</h3>
     <div class="prj-scroll-container">
         <div class="prj-box" onclick="showProjectInfo('Project 1', 'Description of Project 1 goes here.')">
-            <h4>Project 1</h4>
+            <h4>Sentext</h4>
             <p>Description of Project 1 goes here.</p>
             <!-- Project Info Container for Project 1 -->
             <div class="prj-info" id="prj-info-nlp-1">
